<resources>
    <string name="app_name">图书共享</string>

    <!-- Activity -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_frame">FrameActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_book_detail">BookDetailActivity</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="title_activity_user_regulate">UserRegulateActivity</string>
    <string name="title_activity_com_problem">ComProblemActivity</string>
    <string name="title_activity_awash">AWashActivity</string>
    <string name="title_activity_service_scope">ServiceScopeActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_share_code">ShareCodeActivity</string>
    <string name="title_activity_service_note">ServiceNoteActivity</string>
    <string name="title_activity_pay">PayActivity</string>
    <string name="title_activity_feek_back">FeekBackActivity</string>
    <string name="title_activity_about_app">AboutAppActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_my_addr">MyAddrActivity</string>
    <string name="title_activity_city">CityActivity</string>

    <!-- 标题 -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homefragment">homeFragment</string>
    <string name="basketfragment">basketfragment</string>
    <string name="contact_customer">联系客服</string>
    <string name="out_login">退出登录</string>
    <string name="service_scope">服务范围</string>
    <string name="modify_pass">修改密码</string>
    <string name="about_us">关于我们</string>
    <string name="a_wash">件洗</string>
    <string name="user_agree">用户协议</string>
    <string name="feedback">意见反馈</string>
    <string name="chat">聊天</string>
    <string name="my_info">我的信息</string>
    <string name="my_book_info">我的图书信息</string>
    <string name="add_book_info">增加图书</string>

    <!-- 描述 -->
    <string name="title">标题</string>
    <string name="title_right">小功能</string>
    <string name="city">成都市</string>
    <string name="text_delete_order">删除订单</string>
    <string name="text_register">注册</string>
    <string name="text_backout">注销</string>
    <string name="title_login">登录</string>
    <string name="pop_tip_title">提示信息</string>
    <string name="pop_tip_content">请输入正确手机号码</string>
    <string name="phone_null">请输入手机号码</string>
    <string name="pass_null">请输入密码</string>
    <string name="pass_not_equal">两次输入密码不一致，请重新输入</string>
    <string name="name_null">请输入姓名</string>
    <string name="profile_null">请输入简介</string>
    <string name="school_null">请选择学校</string>
    <string name="classes_null">请输入班级</string>
    <string name="detail_dorm_null">请输入宿舍号</string>
    <string name="pass_error">请重新输入正确密码</string>
    <string name="pop_tip_content2">功能尚未开通，敬请期待</string>
    <string name="title_user_regulate">用户协议</string>
    <string name="title_com_problem">常见问题</string>
    <string name="title_service_note">服务说明</string>
    <string name="title_feek_back">意见反馈</string>
    <string name="title_about_us">关于我们</string>
    <string name="title_about_app">关于浣洗</string>
    <string name="title_register">注册</string>
    <string name="title_user_info">用户信息</string>
    <string name="title_pay">支付</string>
    <string name="title_my_addr">我的地址</string>
    <string name="title_select_city">选择城市</string>
    <string name="phone_input">请输入手机号码</string>
    <string name="old_pass_input">请输入旧密码</string>
    <string name="new_pass_input">请输入新密码</string>
    <string name="new_pass_next_input">请再次输入新密码</string>
    <string name="password_input">请输入密码</string>
    <string name="password_next_input">请再次输入密码</string>
    <string name="login_bind">登陆</string>
    <string name="register_login">注册并登陆</string>
    <string name="send_message">发消息</string>
    <string name="text_description">点击“登陆”，即表示同意</string>
    <string name="text_register_login">点击“注册并登陆”，即表示同意</string>
    <string name="text_pattern">《图书分享用户模式》</string>
    <string name="text_refresh">重新获取</string>
    <string name="main_navigation_home">主页</string>
    <string name="main_navigation_my">我</string>
    <string name="main_navigation_more">更多</string>
    <string name="text_loading">加载中…</string>
    <string name="text_loginning">登录中…</string>
    <string name="msg_loading_error">加载失败</string>
    <string name="msg_con_server_error">连接服务器出错</string>
    <string name="is_registered">改手机号码已经注册，请直接登录</string>
    <string name="no_id">不存在该用户，请注册后再登录</string>
    <string name="book">图书</string>
    <string name="book_name">书名</string>
    <string name="tv_profile">简介:</string>
    <string name="tv_book_host">书主:</string>
    <string name="profile">简介</string>
    <string name="search">搜索</string>
    <string name="text_phone">13751338740</string>
    <string name="text_name">邦爷</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failue">删除失败</string>
    <string name="is_delete">是否确认删除</string>
    <string name="sure">确认</string>
    <string name="no">取消</string>
    <string name="update_success">更新成功</string>
    <string name="update_failue">更新失败</string>
    <string name="is_update">是否确认更新</string>
    <string name="is_add">是否确认添加图书</string>
    <string name="is_pass_update">是否确认修改密码</string>
    <string name="is_out">是否确认退出</string>
    <string name="msg_repress">再按一次退出程序</string>
    <string name="text_addr">东莞理工学院</string>
    <string name="update_book_photo">点击更换图书图片</string>
    <string name="is_borrowed">是否被借</string>
    <string name="host_address">书主地址</string>
    <string name="host_phone">书主电话</string>
    <string name="book_detail">图书详情</string>
    <string name="send">发送</string>
    <string name="input_text">请输入信息</string>
    <string name="input_book_name">请输入书名</string>

    <string name="text_tshirt">T恤</string>
    <string name="the_cost">费用总计:</string>
    <string name="last_cost">总计</string>
    <string name="user_info">用户信息</string>
    <string name="write_info">填写</string>
    <string name="one">1</string>
    <string name="text_gird">文字</string>
    <string name="grid_myads">我的地址</string>
    <string name="grid_share">分享推荐码</string>
    <string name="grid_rcmcode">验证推荐码</string>
    <string name="text_balance_pay">余额支付</string>
    <string name="text_alipay">支付宝支付</string>
    <string name="balance_amount">000.00</string>
    <string name="to_up">充值</string>
    <string name="old_pass">旧密码</string>
    <string name="new_pass">新密码</string>
    <string name="ok_pay">确认支付</string>
    <string name="reset_pay_pass">重置支付密码</string>
    <string name="button_num">0</string>
    <string name="button_delete">删除</string>
    <string name="text_input_tips">请输入您的宝贵意见. . . .</string>
    <string name="btn_submit">提交</string>
    <string name="text_website">官网:</string>
    <string name="website">www.huankxy.com</string>
    <string name="btn_save">保存</string>
    <string name="text_modify">修改</string>
    <string name="name_input">请输入姓名（昵称）</string>
    <string name="profile_input">请输入您的简介（心情）</string>
    <string name="btn_man">先生</string>
    <string name="btn_woman">女士</string>
    <string name="ship_address">地址归属</string>
    <string name="school">学校</string>
    <string name="classes">班级</string>
    <string name="dorm">宿舍号</string>
    <string name="input_tips">请精准填写您所在的学校、班级、宿舍号</string>
    <string name="author">作者</string>
    <string name="book_collections">图书类别</string>
    <string name="publisher_name">出版社名称</string>
    <string name="book_profile">简介</string>

    <string name="a">A</string>
    <string name="city_location">定位城市</string>
    <string name="city_search">正在定位中&#8230;</string>
    <string name="noinfo">暂无信息</string>
    <string name="back">返回</string>
    <string name="get_code_fail">获取验证码失败</string>
    <string name="cancel">取消</string>
    <string name="share_weibo_success">微博分享成功</string>
    <string name="share_weixin_success">微信分享成功</string>
    <string name="share_friends_success">朋友圈分享成功</string>
    <string name="share_qq_success">QQ分享成功</string>
    <string name="share_qqzone_success">QQ空间分享成功</string>
    <string name="share_cancel">取消分享</string>
    <string name="share_error">分享失败啊</string>

</resources>
