<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_grey">

    <include
        android:id="@+id/layout_title"
        layout="@layout/layout_title" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="72dp"
        android:layout_marginTop="@dimen/DIMEN_18PX"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/llyt_item"
            android:layout_width="60dp"
            android:layout_height="72dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/DIMEN_24PX">

            <com.bang.bookshare.view.CircleImageView
                android:id="@+id/civ_head_afd"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_default"
                app:border_color="@color/main_blue"
                app:border_width="0.1dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/llyt_item"
            android:text="@string/update_book_photo"
            android:textColor="@color/icon_text_grey"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/DIMEN_94PX"
        android:layout_marginLeft="@dimen/DIMEN_32PX"
        android:layout_marginRight="@dimen/DIMEN_32PX"
        android:layout_marginTop="@dimen/DIMEN_20PX"
        android:background="@drawable/bg_edit_shape">

        <EditText
            android:id="@+id/et_dri_book_name"
            style="@style/EditText_info"
            android:focusable="false"
            android:text="@string/book_name" />

        <EditText
            android:id="@+id/et_book_name"
            style="@style/EditText_info_detail"
            android:layout_toEndOf="@+id/et_dri_book_name" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/DIMEN_94PX"
        android:layout_marginLeft="@dimen/DIMEN_32PX"
        android:layout_marginRight="@dimen/DIMEN_32PX"
        android:layout_marginTop="@dimen/DIMEN_20PX"
        android:background="@drawable/bg_edit_shape">

        <EditText
            android:id="@+id/et_dri_author"
            style="@style/EditText_info"
            android:text="@string/author" />

        <EditText
            android:id="@+id/et_author"
            style="@style/EditText_info_detail"
            android:layout_toEndOf="@+id/et_dri_author" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/DIMEN_94PX"
        android:layout_marginLeft="@dimen/DIMEN_32PX"
        android:layout_marginRight="@dimen/DIMEN_32PX"
        android:layout_marginTop="@dimen/DIMEN_20PX"
        android:background="@drawable/bg_edit_shape">

        <EditText
            android:id="@+id/et_dri_is_borrowed"
            style="@style/EditText_info"
            android:text="@string/is_borrowed" />

        <Spinner
            android:id="@+id/spr_is_borrowed"
            style="@style/EditText_info_detail"
            android:layout_toEndOf="@+id/et_dri_is_borrowed" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/DIMEN_94PX"
        android:layout_marginLeft="@dimen/DIMEN_32PX"
        android:layout_marginRight="@dimen/DIMEN_32PX"
        android:layout_marginTop="@dimen/DIMEN_20PX"
        android:background="@drawable/bg_edit_shape">

        <EditText
            android:id="@+id/et_dri_book_collections"
            style="@style/EditText_info"
            android:text="@string/book_collections" />

        <EditText
            android:id="@+id/et_book_collections"
            style="@style/EditText_info_detail"
            android:layout_toEndOf="@+id/et_dri_book_collections" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/DIMEN_94PX"
        android:layout_marginLeft="@dimen/DIMEN_32PX"
        android:layout_marginRight="@dimen/DIMEN_32PX"
        android:layout_marginTop="@dimen/DIMEN_20PX"
        android:background="@drawable/bg_edit_shape">

        <EditText
            android:id="@+id/et_dri_book_profile"
            style="@style/EditText_info"
            android:text="@string/book_profile" />

        <EditText
            android:id="@+id/et_book_profile"
            style="@style/EditText_info_detail"
            android:layout_toEndOf="@+id/et_dri_book_profile" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_save"
        style="@style/ButtonTheme"
        android:layout_marginTop="@dimen/DIMEN_20PX"
        android:text="@string/btn_save"
        android:textSize="@dimen/TEXT_SIZE_16SP" />
</LinearLayout>
