<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_grey">

    <android.support.v4.view.ViewPager
        android:id="@+id/frag_vpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RadioGroup
        android:id="@+id/main_tab_group"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/DIMEN_90PX"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/main_tab_home"
            style="@style/main_tab_bottom"
            android:checked="true"
            android:drawableTop="@drawable/bg_tab_home"
            android:text="@string/main_navigation_home" />

        <RadioButton
            android:id="@+id/main_tab_my"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/bg_tab_my"
            android:text="@string/main_navigation_my" />

        <RadioButton
            android:id="@+id/main_tab_more"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/bg_tab_more"
            android:text="@string/main_navigation_more" />
    </RadioGroup>

    <ImageView
        android:id="@+id/iv_pop_add"
        android:layout_width="@dimen/DIMEN_100PX"
        android:layout_height="@dimen/DIMEN_100PX"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/DIMEN_70PX"
        android:layout_marginBottom="@dimen/DIMEN_140PX"
        android:background="@mipmap/ic_pop_add"
        android:visibility="invisible"/>

</RelativeLayout>